--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.application.name=nutsBee
 server.port=8080
 
 #DB CONNECTION
-spring.datasource.url=jdbc:postgresql://localhost:5432/nutsBee
-spring.datasource.username=postgres
-spring.datasource.password=Admin
+spring.datasource.url=jdbc:postgresql://dpg-cpi38ei1hbls73bbci9g-a:5432/nutsbee
+spring.datasource.username=nutsbee_user
+spring.datasource.password=kJbX4ruAEvl7H5awOM0WSBKKWIWDqIsP
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 jwt_secret=aab
