API IMPLEMENTATION FOR FORGOT/RESET PASSWORD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,11 @@ spring.datasource.password=kJbX4ruAEvl7H5awOM0WSBKKWIWDqIsP
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
 jwt_secret=aab
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=notificationnutsbee@gmail.com
+spring.mail.password=xpbz vkuz ylwq xrst
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
