--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct-version}</version> <!-- You can replace this version with the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version> <!-- or the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
