Email Template Changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.mail.username=notificationnutsbee@gmail.com
 spring.mail.password=xpbz vkuz ylwq xrst
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.security=DEBUG
+
+spring.thymeleaf.prefix=classpath:/templates/emailTemplate/
+spring.thymeleaf.suffix=.html
