--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version> <!-- or the latest version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
