--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=nutsBee
 server.port=8080
 
 #DB CONNECTION
-spring.datasource.url=jdbc:postgresql://dpg-cpi38ei1hbls73bbci9g-a:5432/nutsbee
+spring.datasource.url=jdbc:postgresql://dpg-cq5o6bmehbks73brrk1g-a:5432/nutsbee_p9yj
 spring.datasource.username=nutsbee_user
-spring.datasource.password=kJbX4ruAEvl7H5awOM0WSBKKWIWDqIsP
+spring.datasource.password=H52aJlwrwIAUfdDojJspBo9NU6I7pY2Z
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
